config/demo-deploy.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: busybox
  namespace: anthos-demo
  labels:
    app: busybox
spec:
  replicas: 1
  containers:
  - image: busybox
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
