config/demo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: anthos-demo
  labels:
    app: busybox
spec:
  replicas: 3
  containers:
  - image: busybox
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
